--- a/doc/trader.6
+++ b/doc/trader.6
@@ -41,7 +41,7 @@
 .if \n[.g] .mso www.tmac
 .\"
 .\" *********************************************************************
-.TH TRADER 6 "14th May, 2017" "Unix-like systems"
+.TH TRADER 6 "23rd May, 2017" "Unix-like systems"
 .SH NAME
 trader \- a game of interstellar trading
 .\" *********************************************************************
@@ -136,7 +136,17 @@ experience, try (again, typed all on one line):
 .sp
 .nh
 .na
-.B "xterm \-g 80x24 \-fa Mono \-fs 18 \-bg black \-fg '#009911' \-bc +sb +bdc +fbx \-xrm 'XTerm*colorBD: #00FF00' \-e trader \-\-no\-colour &"
+.B "xterm \-g 80x24 \-fa Mono \-fs 18 \-bg '#181818' \-fg '#2CAB00' \-bc +sb +bdc +fbx \-xrm 'XTerm*colorBD: #41FF00' \-e trader \-\-no\-colour &"
+.ad
+.hy 14
+.sp
+.RE
+Or, if you prefer the old amber screens of yesteryear:
+.RS
+.sp
+.nh
+.na
+.B "xterm \-g 80x24 \-fa Mono \-fs 18 \-bg '#101010' \-fg '#AB7A00' \-bc +sb +bdc +fbx \-xrm 'XTerm*colorBD: #FFB700' \-e trader \-\-no\-colour &"
 .ad
 .hy 14
 .sp
