--- a/po/da.po
+++ b/po/da.po
@@ -8,14 +8,14 @@
 # This file is distributed under the same license as the trader package.
 #
 # Contributors:
-#   Joe Hansen <joedalton2@yahoo.dk>, 2012-15, 2017.
+#   Joe Hansen <joedalton2@yahoo.dk>, 2012, 2015, 2017.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: trader 7.10-pre2\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
 "POT-Creation-Date: 2017-05-23 07:57+1000\n"
-"PO-Revision-Date: 2017-05-23 08:08+1000\n"
+"PO-Revision-Date: 2017-05-24 08:33+1000\n"
 "Last-Translator: Joe Hansen <joedalton2@yahoo.dk>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
 "Language: da\n"
