--- a/po/nb.po
+++ b/po/nb.po
@@ -8,14 +8,14 @@
 # This file is distributed under the same license as the trader package.
 #
 # Contributors:
-#   Johnny A. Solbu <johnny@solbu.net>, 2012-2017.
+#   Johnny A. Solbu <johnny@solbu.net>, 2012, 2015, 2017.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: trader 7.10-pre2\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
 "POT-Creation-Date: 2017-05-23 07:57+1000\n"
-"PO-Revision-Date: 2017-05-24 04:44+1000\n"
+"PO-Revision-Date: 2017-05-24 08:45+1000\n"
 "Last-Translator: Johnny A. Solbu <johnny@solbu.net>\n"
 "Language-Team: Norwegian Bokmaal <i18n-nb@lister.ping.uio.no>\n"
 "Language: nb\n"
